# Testing

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/instructions/: python-async.instructions.md
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/core/: config.py  crypto.py  logging.py  middleware.py  roles.py
app/db/: base.py  session.py
app/models/: __init__.py  approvals.py  artifact_subtasks.py  artifacts.py  audit_logs.py  figma_images.py  image_processing.py  lokalise_tasks.py  products.py  projects.py  review_findings.py  stages.py  system_settings.py  tenants.py  translation_cache.py  users.py
app/pipeline/: constants.py  exceptions.py  executor.py  factory.py  image_pipeline.py  persistence.py  state_machine.py  strategy.py
app/schemas/: artifact.py  audit.py  auth.py  base.py  figma.py  product.py  project.py  review.py  tenant.py  user.py
app/services/: ai_reviewer.py  approval_service.py  artifact_service.py  assembler.py  audit_service.py  chromadb_service.py  embeddings.py  event_bus.py  figma_ingestion_service.py  figma_service.py  image_classifier.py  lokalise_service.py  notification_service.py  product_service.py  project_service.py  resource_parser.py  review_service.py  sso_service.py  stage_service.py  storage_service.py  tenant_service.py  user_service.py
app/tasks/: lokalise_tasks.py  maintenance_tasks.py  pipeline_tasks.py  sample_task.py
app/utils/: circuit_breaker.py  idempotency.py  pagination.py  retry.py
knewron-localization/: pyproject.toml
knewron-localization/.github/: COPILOT_WORKFLOW.md  copilot-instructions.md
others/: Citiustech_Localization_Solution_1_extracted.txt  DH_Diagnostic_Suite_IFU_US_extracted.txt  Knewron_Localization_Platform_Overview.docx  Knewron_Localization_Platform_Overview_extracted.txt  Localization_UI_extracted.txt  extract_documents.py  extract_ifu.py  extract_localization_ui.py
plan/: LLM_BUILD_GUIDE.md  PROJECT_OVERVIEW.md  README.md
plan/Design/: Architecture_Diagrams.html  Architecture_Diagrams.md  Database_Schema.md  Figma_Integration.html  Figma_Integration.md  (+3 more)
tests/: conftest.py  test_chromadb_tenant_scoping.py  test_multi_tenant_settings.py  test_story_1_1_products_projects_api.py  test_story_2_1_pipeline_executor.py  test_story_2_2_state_machine.py  test_story_2_4_resilience.py  test_story_2_5_join_barrier.py  test_story_5_3_resource_parser.py
(+37 files in other folders)
