[tool.poetry]
name = "knewron-localization"
version = "1.0.0"
description = "Knewron AI Localization Platform — backend (FastAPI + Celery)"
authors = ["CitiusTech"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "0.115.0"
uvicorn = { version = "0.30.6", extras = ["standard"] }
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
email-validator = "2.2.0"
sqlalchemy = "2.0.35"
alembic = "1.13.3"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
celery = "5.4.0"
redis = "5.0.8"
flower = "2.0.1"
chromadb = "0.5.5"
httpx = "0.27.2"
python-jose = { version = "3.3.0", extras = ["cryptography"] }
cryptography = "^43.0.0"
passlib = { version = "1.7.4", extras = ["bcrypt"] }
python-multipart = "0.0.9"
python-docx = "1.1.2"
pillow = "10.4.0"
tenacity = "9.0.0"
structlog = "24.4.0"
pyyaml = "6.0.2"
lxml = "5.3.0"
python-dotenv = "1.0.1"

# AWS: S3 storage backend + Bedrock (Titan) image embeddings. Kept as a
# default dependency (not an extra) since S3 is the default cloud storage
# choice in `LOCKED_Design_v1.0.md` §9 and boto3 is comparatively light.
boto3 = "1.35.24"

# GCP: GCS storage backend + Vertex AI multimodal image embeddings. Both are
# only imported when STORAGE_BACKEND=gcs or AI_EMBEDDING_BACKEND=gcp
# (see app/services/storage_service.py, app/services/embeddings.py), so they
# are an optional extra to keep a minimal/local install lightweight.
google-cloud-storage = { version = "^2.18.0", optional = true }
google-cloud-aiplatform = { version = "^1.68.0", optional = true }

# Local/dev CLIP embedding fallback (Technical_Design Appendix B) — heavy
# (torch), so it's an optional extra too; without it AI_EMBEDDING_BACKEND
# falls back to the dependency-light perceptual-hash embedder.
sentence-transformers = { version = "3.1.1", optional = true }

[tool.poetry.extras]
gcp = ["google-cloud-storage", "google-cloud-aiplatform"]
ml = ["sentence-transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-cov = "5.0.0"
httpx-ws = "0.6.2"
fakeredis = "2.24.1"
freezegun = "1.5.1"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
